--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "axios": "^0.19.0",
+    "vue": "^2.5.11",
+    "vuex": "^3.1.2"
   },
   "browserslist": [
     "> 1%",
